Multiple steps to make timetables

--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,18 +145,77 @@
     "\n",
     "    return df_new\n",
     "\n",
-    "superviseddfs = []\n",
+    "supervised_dfs = []\n",
     "for stepsize in STEPSIZES:\n",
-    "    superviseddfs.append(make_supervised(total_df, OUTPUT_FORECAST,\"vesselId\", INPUT_WINDOW, OUTPUT_WINDOW, size=stepsize))\n"
+    "    supervised_dfs.append((stepsize,make_supervised(total_df, OUTPUT_FORECAST,\"vesselId\", INPUT_WINDOW, OUTPUT_WINDOW, size=stepsize)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216\n",
+      "                     cog_t-4  cog_t-3  cog_t-2  cog_t-1  cog_t  sog_t-4  \\\n",
+      "time                                                                      \n",
+      "2024-01-14 13:20:00    346.4    346.4    346.4    290.4  290.4     14.9   \n",
+      "2024-01-17 13:20:00    346.4    346.4    290.4    290.4  290.4     14.9   \n",
+      "2024-01-20 13:20:00    346.4    290.4    290.4    290.4  290.4     14.9   \n",
+      "2024-01-23 13:20:00    290.4    290.4    290.4    290.4  290.4     15.7   \n",
+      "2024-01-26 13:20:00    290.4    290.4    290.4    290.4  305.2     15.7   \n",
+      "\n",
+      "                     sog_t-3  sog_t-2  sog_t-1  sog_t  ...  portLatitude_t-3  \\\n",
+      "time                                                   ...                     \n",
+      "2024-01-14 13:20:00     14.9     14.9     15.7   15.7  ...        -33.587500   \n",
+      "2024-01-17 13:20:00     14.9     15.7     15.7   15.7  ...        -33.587500   \n",
+      "2024-01-20 13:20:00     15.7     15.7     15.7   15.7  ...         13.574444   \n",
+      "2024-01-23 13:20:00     15.7     15.7     15.7   15.7  ...         13.574444   \n",
+      "2024-01-26 13:20:00     15.7     15.7     15.7   14.5  ...         13.574444   \n",
+      "\n",
+      "                     portLatitude_t-2  portLatitude_t-1  portLatitude_t  \\\n",
+      "time                                                                      \n",
+      "2024-01-14 13:20:00        -33.587500         13.574444       13.574444   \n",
+      "2024-01-17 13:20:00         13.574444         13.574444       13.574444   \n",
+      "2024-01-20 13:20:00         13.574444         13.574444       13.574444   \n",
+      "2024-01-23 13:20:00         13.574444         13.574444       13.574444   \n",
+      "2024-01-26 13:20:00         13.574444         13.574444       19.070556   \n",
+      "\n",
+      "                     latitude_t+1  longitude_t+1  cog_t+1  sog_t+1  rot_t+1  \\\n",
+      "time                                                                          \n",
+      "2024-01-14 13:20:00      13.33372      -89.80504    290.4     15.7      0.0   \n",
+      "2024-01-17 13:20:00      13.33372      -89.80504    290.4     15.7      0.0   \n",
+      "2024-01-20 13:20:00      13.33372      -89.80504    290.4     15.7      0.0   \n",
+      "2024-01-23 13:20:00      18.85018     -104.74161    305.2     14.5      0.0   \n",
+      "2024-01-26 13:20:00      18.85018     -104.74161    305.2     14.5      0.0   \n",
+      "\n",
+      "                     heading_t+1  \n",
+      "time                              \n",
+      "2024-01-14 13:20:00        287.0  \n",
+      "2024-01-17 13:20:00        287.0  \n",
+      "2024-01-20 13:20:00        287.0  \n",
+      "2024-01-23 13:20:00        303.0  \n",
+      "2024-01-26 13:20:00        303.0  \n",
+      "\n",
+      "[5 rows x 46 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "j=7\n",
+    "print(supervised_dfs[j][0])\n",
+    "print(supervised_dfs[j][1].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Sorting by time\n",
     "\n",
     "\n",
     "#Sorting columns\n",
@@ -176,14 +235,16 @@
     "    # Reorder dataframe columns\n",
     "    return df[sorted_t_columns]\n",
     "\n",
-    "for supervised_df in superviseddfs:\n",
+    "sorted_dfs=[]\n",
+    "for stpesize,supervised_df in supervised_dfs:\n",
     "    supervised_df = supervised_df.sort_index(ascending = True)\n",
-    "    supervised_df=sort_columns(supervised_df)\n"
+    "    supervised_df=sort_columns(supervised_df)\n",
+    "    sorted_dfs.append((stpesize,supervised_df))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,24 +267,56 @@
     "\n",
     "    return X_train, y_train, X_val, y_val, X_test, y_test\n",
     "\n",
-    "X_train, y_train, X_val, y_val, X_test, y_test = train_test_split(supervised_df, 0.75, 0.85, OUTPUT_WINDOW)\n"
+    "divided_sets = []\n",
+    "for stepsize, supervised_df in sorted_dfs:\n",
+    "    X_train, y_train, X_val, y_val, X_test, y_test = train_test_split(supervised_df, 0.75, 0.85, OUTPUT_WINDOW)\n",
+    "    divided_sets.append((stepsize,X_train, y_train, X_val, y_val, X_test, y_test))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = xgb.XGBRFRegressor()\n",
+    "def evaluate(stepsize, preds, y_val):\n",
+    "    print(\"/\"+\"-\"*50+\"\\\\\")\n",
+    "    print(\"Evaluating model with stepsize\", stepsize)\n",
     "\n",
-    "model.fit(X_train, y_train, verbose=True)\n",
-    "preds = model.predict(X_val)"
+    "    results = {\n",
+    "        \"MAE\": mean_absolute_error(y_val, preds),\n",
+    "        \"MSE\": np.square(np.subtract(y_val,preds)).mean(),\n",
+    "        \"R2 Score\": r2_score(y_val, preds),\n",
+    "        \"RMSE\": np.sqrt(np.square(np.subtract(y_val,preds)).mean())\n",
+    "    }\n",
+    "\n",
+    "    for metric, value in results.items():\n",
+    "        print(f\"{metric}: {value}\")\n",
+    "    print(\"\\\\\"+\"-\"*50+\"/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = []\n",
+    "predictions = []\n",
+    "\n",
+    "for stepsize, X_train, y_train, X_val, y_val, X_test, y_test in divided_sets:\n",
+    "    model = xgb.XGBRFRegressor()\n",
+    "\n",
+    "    model.fit(X_train, y_train, verbose=True)\n",
+    "    preds = model.predict(X_val)\n",
+    "    evaluate(stepsize, preds, y_val)\n",
+    "    models.append((stepsize, model))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -284,10 +377,10 @@
     }
    ],
    "source": [
-    "def closest_20_min_mark(timestamp):\n",
+    "def closest_n_min_mark(timestamp, n=1):\n",
     "    timestamp = pd.to_datetime(timestamp)\n",
     "    minutes = timestamp.minute\n",
-    "    closest_mark = round(minutes / 20) * 20\n",
+    "    closest_mark = round(minutes / n*20) * n*20\n",
     "    if closest_mark == 60:\n",
     "        rounded_timestamp = timestamp.replace(minute=0, second=0, microsecond=0) + pd.Timedelta(hours=1)\n",
     "    else:\n",
@@ -302,13 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def shift_to_back(process_df):\n",
-    "    \n",
-    "            \n",
+    "def shift_to_back(process_df):      \n",
     "    for _, col in enumerate(OUTPUT_FORECAST):\n",
     "\n",
     "        max_suffix_neg = 0\n",
@@ -340,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,8 +441,8 @@
     "    preds = pd.DataFrame(columns=[\"vesselId\", \"approximate_time\"])\n",
     "    \n",
     "    # Determine the furthest time in 20-minute intervals\n",
-    "    furthest_time = closest_20_min_mark(test_df[\"time\"].max())\n",
-    "    current_time = closest_20_min_mark(X_test.index.max())\n",
+    "    furthest_time = closest_n_min_mark(test_df[\"time\"].max())\n",
+    "    current_time = closest_n_min_mark(X_test.index.max())\n",
     "    \n",
     "    # Generate the future time steps at 20-minute intervals\n",
     "    future_steps = pd.date_range(start=current_time, end=furthest_time, freq='20min')\n",
@@ -52638,7 +52729,7 @@
     "        new_row = pd.DataFrame()\n",
     "        new_row=preds_df[\n",
     "            (preds_df[\"vesselId\"] == test[\"vesselId\"]) & \n",
-    "            (preds_df[\"approximate_time\"] == closest_20_min_mark(test[\"time\"]))\n",
+    "            (preds_df[\"approximate_time\"] == closest_n_min_mark(test[\"time\"]))\n",
     "            ][[\"latitude\", \"longitude\"]]\n",
     "        new_row[\"ID\"] = test[\"ID\"]\n",
     "        new_row[\"time\"] = test[\"time\"]\n",
@@ -52659,7 +52750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52686,15 +52777,7 @@
     }
    ],
    "source": [
-    "results = {\n",
-    "    \"MAE\": mean_absolute_error(y_val, preds),\n",
-    "    \"MSE\": np.square(np.subtract(y_val,preds)).mean(),\n",
-    "    \"R2 Score\": r2_score(y_val, preds),\n",
-    "    \"RMSE\": np.sqrt(np.square(np.subtract(y_val,preds)).mean())\n",
-    "}\n",
-    "\n",
-    "for metric, value in results.items():\n",
-    "    print(f\"{metric}: {value}\")"
+    "\n"
    ]
   },
   {
