--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -49,7 +49,7 @@
     "parsed_data = data_loader.load_raw_data(path=\"../../resources\")\n",
     "small_df=pd.DataFrame()\n",
     "for vesselId in parsed_data[\"vesselId\"].unique():\n",
-    "    small_df = pd.concat([small_df, parsed_data[parsed_data[\"vesselId\"]==vesselId].iloc[0:10]])\n",
+    "    small_df = pd.concat([small_df, parsed_data[parsed_data[\"vesselId\"]==vesselId]])\n",
     "\n",
     "parsed_data = small_df"
    ]
@@ -81,11 +81,11 @@
       "2024-01-01 06:58:55   88.2  14.3    0       86        0 -35.16805  -56.53190   \n",
       "2024-01-01 07:15:56   88.3  12.3    0       86        0 -35.16715  -56.45306   \n",
       "...                    ...   ...  ...      ...      ...       ...        ...   \n",
-      "2024-03-04 22:11:01   29.5   7.6    0       28        0  35.06647  139.73949   \n",
-      "2024-03-04 23:18:01    4.7   9.9    0        2        0  35.20766  139.77972   \n",
-      "2024-03-04 23:33:01  359.2  11.1 -127      356        0  35.25349  139.77993   \n",
-      "2024-03-04 23:58:11  328.5  11.5    0      329        0  35.31908  139.72781   \n",
-      "2024-03-05 00:17:50   15.1  12.7    0       16        0  35.38042  139.71417   \n",
+      "2024-05-04 04:14:57   60.7  16.0    0       54        0  37.06484  144.66435   \n",
+      "2024-05-04 04:35:20   58.2  15.7    0       51        0  37.11041  144.76165   \n",
+      "2024-05-04 04:55:03   57.7  15.4    0       50        0  37.15745  144.85164   \n",
+      "2024-05-04 05:16:09   58.7  15.1    0       48        0  37.20409  144.94732   \n",
+      "2024-05-04 05:24:33   59.8  14.9    0       48        0  37.22231  144.98452   \n",
       "\n",
       "                                     vesselId                    portId  \\\n",
       "time                                                                      \n",
@@ -95,99 +95,63 @@
       "2024-01-01 06:58:55  61e9f3a8b937134a3c4bfdf7  61d371c43aeaecc07011a37f   \n",
       "2024-01-01 07:15:56  61e9f3a8b937134a3c4bfdf7  61d371c43aeaecc07011a37f   \n",
       "...                                       ...                       ...   \n",
-      "2024-03-04 22:11:01  61e9f47ab937134a3c4c02f7  61d37a3e1366c3998241d95f   \n",
-      "2024-03-04 23:18:01  61e9f47ab937134a3c4c02f7  61d37a3e1366c3998241d95f   \n",
-      "2024-03-04 23:33:01  61e9f47ab937134a3c4c02f7  61d37a3e1366c3998241d95f   \n",
-      "2024-03-04 23:58:11  61e9f47ab937134a3c4c02f7  61d37a3e1366c3998241d95f   \n",
-      "2024-03-05 00:17:50  61e9f47ab937134a3c4c02f7  61d379f61366c3998241d8d2   \n",
+      "2024-05-04 04:14:57  61e9f47ab937134a3c4c02f7  61d37a061366c3998241d8f1   \n",
+      "2024-05-04 04:35:20  61e9f47ab937134a3c4c02f7  61d37a061366c3998241d8f1   \n",
+      "2024-05-04 04:55:03  61e9f47ab937134a3c4c02f7  61d37a061366c3998241d8f1   \n",
+      "2024-05-04 05:16:09  61e9f47ab937134a3c4c02f7  61d37a061366c3998241d8f1   \n",
+      "2024-05-04 05:24:33  61e9f47ab937134a3c4c02f7  61d37a061366c3998241d8f1   \n",
       "\n",
-      "                              etaParsed  ... enginePower freshWater  fuel  \\\n",
-      "time                                     ...                                \n",
-      "2024-01-01 00:00:25 2024-01-09 23:00:00  ...         0.0        NaN   NaN   \n",
-      "2024-01-01 06:09:08 2024-01-09 23:00:00  ...         0.0        NaN   NaN   \n",
-      "2024-01-01 06:38:19 2024-01-09 23:00:00  ...         0.0        NaN   NaN   \n",
-      "2024-01-01 06:58:55 2024-01-09 23:00:00  ...         0.0        NaN   NaN   \n",
-      "2024-01-01 07:15:56 2024-01-09 23:00:00  ...         0.0        NaN   NaN   \n",
-      "...                                 ...  ...         ...        ...   ...   \n",
-      "2024-03-04 22:11:01 2024-01-16 07:00:00  ...     10010.0        NaN   NaN   \n",
-      "2024-03-04 23:18:01 2024-01-16 07:00:00  ...     10010.0        NaN   NaN   \n",
-      "2024-03-04 23:33:01 2024-01-16 07:00:00  ...     10010.0        NaN   NaN   \n",
-      "2024-03-04 23:58:11 2024-01-16 07:00:00  ...     10010.0        NaN   NaN   \n",
-      "2024-03-05 00:17:50 2024-04-02 23:00:00  ...     10010.0        NaN   NaN   \n",
+      "                              etaParsed UN_LOCODE ISO  portLongitude  \\\n",
+      "time                                                                   \n",
+      "2024-01-01 00:00:25 2024-01-09 23:00:00     CLSAI  CL     -71.618889   \n",
+      "2024-01-01 06:09:08 2024-01-09 23:00:00     CLSAI  CL     -71.618889   \n",
+      "2024-01-01 06:38:19 2024-01-09 23:00:00     CLSAI  CL     -71.618889   \n",
+      "2024-01-01 06:58:55 2024-01-09 23:00:00     CLSAI  CL     -71.618889   \n",
+      "2024-01-01 07:15:56 2024-01-09 23:00:00     CLSAI  CL     -71.618889   \n",
+      "...                                 ...       ...  ..            ...   \n",
+      "2024-05-04 04:14:57 2024-05-14 15:00:00     JPISM  JP     141.265833   \n",
+      "2024-05-04 04:35:20 2024-05-14 15:00:00     JPISM  JP     141.265833   \n",
+      "2024-05-04 04:55:03 2024-05-14 15:00:00     JPISM  JP     141.265833   \n",
+      "2024-05-04 05:16:09 2024-05-14 15:00:00     JPISM  JP     141.265833   \n",
+      "2024-05-04 05:24:33 2024-05-14 15:00:00     JPISM  JP     141.265833   \n",
       "\n",
-      "                     homePort length  maxHeight  maxSpeed  maxWidth  \\\n",
-      "time                                                                  \n",
-      "2024-01-01 00:00:25    NASSAU  199.0        NaN       NaN       NaN   \n",
-      "2024-01-01 06:09:08    NASSAU  199.0        NaN       NaN       NaN   \n",
-      "2024-01-01 06:38:19    NASSAU  199.0        NaN       NaN       NaN   \n",
-      "2024-01-01 06:58:55    NASSAU  199.0        NaN       NaN       NaN   \n",
-      "2024-01-01 07:15:56    NASSAU  199.0        NaN       NaN       NaN   \n",
-      "...                       ...    ...        ...       ...       ...   \n",
-      "2024-03-04 22:11:01       NaN  164.0        NaN       NaN       NaN   \n",
-      "2024-03-04 23:18:01       NaN  164.0        NaN       NaN       NaN   \n",
-      "2024-03-04 23:33:01       NaN  164.0        NaN       NaN       NaN   \n",
-      "2024-03-04 23:58:11       NaN  164.0        NaN       NaN       NaN   \n",
-      "2024-03-05 00:17:50       NaN  164.0        NaN       NaN       NaN   \n",
+      "                     portLatitude  \n",
+      "time                               \n",
+      "2024-01-01 00:00:25    -33.587500  \n",
+      "2024-01-01 06:09:08    -33.587500  \n",
+      "2024-01-01 06:38:19    -33.587500  \n",
+      "2024-01-01 06:58:55    -33.587500  \n",
+      "2024-01-01 07:15:56    -33.587500  \n",
+      "...                           ...  \n",
+      "2024-05-04 04:14:57     38.413333  \n",
+      "2024-05-04 04:35:20     38.413333  \n",
+      "2024-05-04 04:55:03     38.413333  \n",
+      "2024-05-04 05:16:09     38.413333  \n",
+      "2024-05-04 05:24:33     38.413333  \n",
       "\n",
-      "                     rampCapacity  yearBuilt  \n",
-      "time                                          \n",
-      "2024-01-01 00:00:25           NaN       2004  \n",
-      "2024-01-01 06:09:08           NaN       2004  \n",
-      "2024-01-01 06:38:19           NaN       2004  \n",
-      "2024-01-01 06:58:55           NaN       2004  \n",
-      "2024-01-01 07:15:56           NaN       2004  \n",
-      "...                           ...        ...  \n",
-      "2024-03-04 22:11:01           NaN       2000  \n",
-      "2024-03-04 23:18:01           NaN       2000  \n",
-      "2024-03-04 23:33:01           NaN       2000  \n",
-      "2024-03-04 23:58:11           NaN       2000  \n",
-      "2024-03-05 00:17:50           NaN       2000  \n",
-      "\n",
-      "[6871 rows x 33 columns]\n",
-      "[===================-] 100.0% complete\n",
-      "[====================] 100.0% complete\r"
+      "[1520450 rows x 14 columns]\n",
+      "[=====---------------] 28.63% complete\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m final_df\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(index_data)\n\u001b[1;32m---> 19\u001b[0m resampled_data_20min \u001b[38;5;241m=\u001b[39m \u001b[43mresampler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvesselId\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m20min\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m resampled_data_20min\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../resources/data_resampled_20min.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[5], line 10\u001b[0m, in \u001b[0;36mresampler\u001b[1;34m(df, sorting_column, freq)\u001b[0m\n\u001b[0;32m      7\u001b[0m     loadBar\u001b[38;5;241m.\u001b[39mload_bar(\u001b[38;5;28mlen\u001b[39m(unique_ids),i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      8\u001b[0m     resample_partial \u001b[38;5;241m=\u001b[39m df[df[sorting_column] \u001b[38;5;241m==\u001b[39m unique_ids[i]]\u001b[38;5;241m.\u001b[39mresample(freq)\u001b[38;5;241m.\u001b[39mlast()\n\u001b[1;32m---> 10\u001b[0m     resample_partial \u001b[38;5;241m=\u001b[39m \u001b[43mfill_with_proximity\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresample_partial\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m     partial_list\u001b[38;5;241m.\u001b[39mappend(resample_partial)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m partial_list:\n",
+      "File \u001b[1;32mc:\\Users\\Bruker\\OneDrive - NTNU\\Studier\\2024_Host\\TDT4173 Moderne maskinlæring i praksis\\OceanWarlock\\OceanWarlock\\src\\searoutePointFinder.py:21\u001b[0m, in \u001b[0;36mfill_with_proximity\u001b[1;34m(df)\u001b[0m\n\u001b[0;32m     19\u001b[0m     route[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgeometry\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoordinates\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m [start_point\u001b[38;5;241m.\u001b[39mtolist()] \u001b[38;5;241m+\u001b[39m route[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgeometry\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoordinates\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m [end_point\u001b[38;5;241m.\u001b[39mtolist()]\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;66;03m# Interpolate route points for each missing timestamp in the segment\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m     \u001b[43mfill_missing_segment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroute\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_idx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mffill()\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
+      "File \u001b[1;32mc:\\Users\\Bruker\\OneDrive - NTNU\\Studier\\2024_Host\\TDT4173 Moderne maskinlæring i praksis\\OceanWarlock\\OceanWarlock\\src\\searoutePointFinder.py:60\u001b[0m, in \u001b[0;36mfill_missing_segment\u001b[1;34m(df, route, start_idx, end_idx)\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(df[start_idx:end_idx]\u001b[38;5;241m.\u001b[39mindex):\n\u001b[0;32m     59\u001b[0m     fraction \u001b[38;5;241m=\u001b[39m (i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m/\u001b[39m (num_missing \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m---> 60\u001b[0m     point \u001b[38;5;241m=\u001b[39m \u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minterpolate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfraction\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlength\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     61\u001b[0m     df\u001b[38;5;241m.\u001b[39mat[idx, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatitude\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m point\u001b[38;5;241m.\u001b[39my\n\u001b[0;32m     62\u001b[0m     df\u001b[38;5;241m.\u001b[39mat[idx, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlongitude\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m point\u001b[38;5;241m.\u001b[39mx\n",
+      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\shapely\\geometry\\base.py:870\u001b[0m, in \u001b[0;36mBaseGeometry.interpolate\u001b[1;34m(self, distance, normalized)\u001b[0m\n\u001b[0;32m    859\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minterpolate\u001b[39m(\u001b[38;5;28mself\u001b[39m, distance, normalized\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m    860\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return a point at the specified distance along a linear geometry\u001b[39;00m\n\u001b[0;32m    861\u001b[0m \n\u001b[0;32m    862\u001b[0m \u001b[38;5;124;03m    Negative length values are taken as measured in the reverse\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    868\u001b[0m \u001b[38;5;124;03m    Alias of `line_interpolate_point`.\u001b[39;00m\n\u001b[0;32m    869\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 870\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mshapely\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mline_interpolate_point\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdistance\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnormalized\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnormalized\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\shapely\\decorators.py:77\u001b[0m, in \u001b[0;36mmultithreading_enabled.<locals>.wrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     75\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m arr \u001b[38;5;129;01min\u001b[39;00m array_args:\n\u001b[0;32m     76\u001b[0m         arr\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mwriteable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m---> 77\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     79\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m arr, old_flag \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(array_args, old_flags):\n",
+      "File \u001b[1;32mc:\\Users\\Bruker\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\shapely\\linear.py:51\u001b[0m, in \u001b[0;36mline_interpolate_point\u001b[1;34m(line, distance, normalized, **kwargs)\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lib\u001b[38;5;241m.\u001b[39mline_interpolate_point_normalized(line, distance)\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 51\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mline_interpolate_point\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdistance\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "# def fill_with_proximity(df):\n",
-    "#     # Forward fill first\n",
-    "#     df_ffill = df.ffill()\n",
-    "    \n",
-    "#     # Backward fill next\n",
-    "#     df_bfill = df.bfill()\n",
-    "#     # Create a mask for original missing values\n",
-    "#     mask = df.isna()\n",
-    "\n",
-    "#     # Create a new DataFrame to hold the results\n",
-    "#     filled_df = df.copy()\n",
-    "\n",
-    "#     # Iterate over each missing value\n",
-    "#     for i in range(len(df)):\n",
-    "#         if mask.iloc[i, 0]:  # Check if the value is missing\n",
-    "#             # Get the current index (timestamp)\n",
-    "#             current_time = df.index[i]\n",
-    "\n",
-    "#             # Get the last known value index (timestamp)\n",
-    "#             last_known_index = df_ffill.first_valid_index()\n",
-    "#             if last_known_index is not None:\n",
-    "#                 distance_to_ffill = (current_time - last_known_index).total_seconds()  # distance to last known\n",
-    "\n",
-    "#             # Get the next known value index (timestamp)\n",
-    "#             next_known_index = df_bfill.first_valid_index()\n",
-    "#             if next_known_index is not None:\n",
-    "#                 distance_to_bfill = (next_known_index - current_time).total_seconds()  # distance to next known\n",
-    "\n",
-    "#             # Fill based on proximity\n",
-    "#             if (last_known_index is not None and distance_to_ffill < distance_to_bfill) or next_known_index is None:\n",
-    "#                 filled_df.iloc[i] = df_ffill.iloc[i]\n",
-    "#             else:\n",
-    "#                 filled_df.iloc[i] = df_bfill.iloc[i]\n",
-    "\n",
-    "#     return filled_df\n",
-    "\n",
-    "\n",
-    "\n",
     "def resampler(df, sorting_column, freq):\n",
     "    unique_ids = df[sorting_column].unique()\n",
     "    final_df = pd.DataFrame()\n",
@@ -213,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
