--- a/src/exploring_data.ipynb
+++ b/src/exploring_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,12 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from csv_parser import CSVParser\n",
-    "from markovSquares import markovSquares, markov_index_inner"
+    "from csv_parser import CSVParser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,15 +78,11 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [cog, sog, rot, heading, navstat, latitude, longitude, vesselId, portId, etaParsed, UN_LOCODE, ISO, portLongitude, portLatitude, shippingLineId, CEU, DWT, GT, NT, vesselType, breadth, depth, draft, enginePower, freshWater, fuel, homePort, length, maxHeight, maxSpeed, maxWidth, rampCapacity, yearBuilt, rot_cat]\n",
+      "Columns: [cog, sog, rot, heading, navstat, latitude, longitude, vesselId, portId, etaParsed, UN_LOCODE, ISO, portLongitude, portLatitude, rot_cat]\n",
       "Index: []\n",
-      "\n",
-      "[0 rows x 34 columns]\n",
       "Empty DataFrame\n",
-      "Columns: [cog, sog, rot, heading, navstat, latitude, longitude, vesselId, portId, etaParsed, UN_LOCODE, ISO, portLongitude, portLatitude, shippingLineId, CEU, DWT, GT, NT, vesselType, breadth, depth, draft, enginePower, freshWater, fuel, homePort, length, maxHeight, maxSpeed, maxWidth, rampCapacity, yearBuilt, rot_cat]\n",
-      "Index: []\n",
-      "\n",
-      "[0 rows x 34 columns]\n"
+      "Columns: [cog, sog, rot, heading, navstat, latitude, longitude, vesselId, portId, etaParsed, UN_LOCODE, ISO, portLongitude, portLatitude, rot_cat]\n",
+      "Index: []\n"
      ]
     },
     {
@@ -134,7 +129,9 @@
     "sns.histplot(x = \"rot_cat\", data = total_df)\n",
     "plt.show()\n",
     "\n",
-    "#Will check if this actually changes anything based on the test error."
+    "#Will check if this actually changes anything based on the test error.\n",
+    "\n",
+    "total_df.drop()"
    ]
   },
   {
@@ -207,6 +204,26 @@
     "#sns.histplot(x = \"DWT\", data = toy_data) #Most are between 10000-30000.\n",
     "#sns.histplot(x = \"breadth\", data = toy_data) #Most are between 25-35m.3\n",
     "#sns.histplot(x = \"draft\", data = toy_data) #Most have draft lower than 10m. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['cog', 'sog', 'rot', 'heading', 'navstat', 'latitude', 'longitude',\n",
+      "       'vesselId', 'portId', 'etaParsed', 'UN_LOCODE', 'ISO', 'portLongitude',\n",
+      "       'portLatitude', 'rot_cat'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(total_df.columns)"
    ]
   },
   {
