--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "\n",
     "import loadBar\n",
     "from csv_parser import CSVParser\n",
+    "from globals import RESOURCE_FOLDER\n",
     "from markovSquares import MarkovSquares\n",
     "from data_handler import LocalToLargeDataLoader\n",
     "from searoutePointFinder import fill_with_proximity\n"
@@ -49,7 +50,7 @@
    "outputs": [],
    "source": [
     "index_data = parsed_data.copy()\n",
-    "index_data.set_index(\"time\", inplace=True)\n"
+    "index_data.set_index(\"time\", inplace=True)"
    ]
   },
   {
@@ -186,10 +187,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_df = pd.read_csv(\"../../resources/data_resampled_20min.csv\")\n",
+    "total_df = pd.read_csv(RESOURCE_FOLDER+\"/data_resampled_20min.csv\")\n",
     "\n",
     "\n",
-    "# total_df = pd.read_csv(\"../../resources/resampled_data_h.csv\")\n",
+    "# total_df = pd.read_csv(RESOURCE_FOLDER+\"/resampled_data_h.csv\")\n",
     "\n",
     "total_df['etaParsed'] = pd.to_datetime(total_df['etaParsed'])\n",
     "total_df[\"time\"] = pd.to_datetime(total_df['time'])\n",
@@ -207,7 +208,7 @@
    "source": [
     "markov = MarkovSquares(2)\n",
     "markov.markovSquares(total_df, \"vesselId\")\n",
-    "np.save(markov.normalized_markov_matrix, \"../../resources/markov_matrix.npy\")"
+    "np.save(markov.normalized_markov_matrix, RESOURCE_FOLDER+\"/markov_matrix.npy\")"
    ]
   },
   {
@@ -241,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_df.to_csv(\"../../resources/data_resampled_20min_markov.csv\")"
+    "total_df.to_csv(RESOURCE_FOLDER+\"/data_resampled_20min_markov.csv\")"
    ]
   },
   {
@@ -255,16 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_df = pd.read_csv(\"../../resources/data_resampled_20min_markov.csv\")"
+    "total_df = pd.read_csv(RESOURCE_FOLDER+\"/data_resampled_20min_markov.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
      "output_type": "stream",
      "text": [
       "Creating supervised data\n",
-      "[============--------] 64.68% complete\r"
+      "[====================] 100.0% complete\n"
      ]
     }
    ],
@@ -402,48 +403,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  time    cog  sog  rot  heading  navstat   latitude  \\\n",
-      "0  2024-01-01 00:00:00  284.0  0.7  0.0     88.0      0.0 -34.743700   \n",
-      "1  2024-01-01 00:20:00  284.0  0.7  0.0     88.0      0.0 -34.627229   \n",
-      "2  2024-01-01 00:40:00  284.0  0.7  0.0     88.0      0.0 -34.510757   \n",
-      "3  2024-01-01 01:00:00  284.0  0.7  0.0     88.0      0.0 -34.394286   \n",
-      "4  2024-01-01 01:20:00  284.0  0.7  0.0     88.0      0.0 -34.277814   \n",
+      "              time_t-4             time_t-3             time_t-2  \\\n",
+      "0                 None                 None                 None   \n",
+      "1                 None                 None                 None   \n",
+      "2                 None                 None  2024-01-01 00:00:00   \n",
+      "3                 None  2024-01-01 00:00:00  2024-01-01 00:20:00   \n",
+      "4  2024-01-01 00:00:00  2024-01-01 00:20:00  2024-01-01 00:40:00   \n",
       "\n",
-      "   longitude                  vesselId                    portId  ...  \\\n",
-      "0 -57.851300  61e9f3a8b937134a3c4bfdf7  61d371c43aeaecc07011a37f  ...   \n",
-      "1 -57.966135  61e9f3a8b937134a3c4bfdf7  61d371c43aeaecc07011a37f  ...   \n",
-      "2 -58.080969  61e9f3a8b937134a3c4bfdf7  61d371c43aeaecc07011a37f  ...   \n",
-      "3 -58.195804  61e9f3a8b937134a3c4bfdf7  61d371c43aeaecc07011a37f  ...   \n",
-      "4 -58.310639  61e9f3a8b937134a3c4bfdf7  61d371c43aeaecc07011a37f  ...   \n",
+      "              time_t-1               time_t  cog_t-4  cog_t-3  cog_t-2  \\\n",
+      "0                 None  2024-01-01 00:00:00      NaN      NaN      NaN   \n",
+      "1  2024-01-01 00:00:00  2024-01-01 00:20:00      NaN      NaN      NaN   \n",
+      "2  2024-01-01 00:20:00  2024-01-01 00:40:00      NaN      NaN    284.0   \n",
+      "3  2024-01-01 00:40:00  2024-01-01 01:00:00      NaN    284.0    284.0   \n",
+      "4  2024-01-01 01:00:00  2024-01-01 01:20:00    284.0    284.0    284.0   \n",
       "\n",
-      "   portLatitude        SW         S   SE         W         C    E   NW    N  \\\n",
-      "0      -33.5875  0.078325  0.485714  0.0  0.348030  0.087931  0.0  0.0  0.0   \n",
-      "1      -33.5875  0.078325  0.485714  0.0  0.348030  0.087931  0.0  0.0  0.0   \n",
-      "2      -33.5875  0.089428  0.445416  0.0  0.374006  0.091150  0.0  0.0  0.0   \n",
-      "3      -33.5875  0.089428  0.445416  0.0  0.374006  0.091150  0.0  0.0  0.0   \n",
-      "4      -33.5875  0.089428  0.445416  0.0  0.374006  0.091150  0.0  0.0  0.0   \n",
+      "   cog_t-1  cog_t  ...  NE_t-3  NE_t-2  NE_t-1  NE_t  latitude_t+1  \\\n",
+      "0      NaN  284.0  ...     NaN     NaN     NaN   0.0    -34.627229   \n",
+      "1    284.0  284.0  ...     NaN     NaN     0.0   0.0    -34.510757   \n",
+      "2    284.0  284.0  ...     NaN     0.0     0.0   0.0    -34.394286   \n",
+      "3    284.0  284.0  ...     0.0     0.0     0.0   0.0    -34.277814   \n",
+      "4    284.0  284.0  ...     0.0     0.0     0.0   0.0    -34.239269   \n",
       "\n",
-      "    NE  \n",
-      "0  0.0  \n",
-      "1  0.0  \n",
-      "2  0.0  \n",
-      "3  0.0  \n",
-      "4  0.0  \n",
+      "   longitude_t+1  cog_t+1  sog_t+1  rot_t+1  heading_t+1  \n",
+      "0     -57.966135    284.0      0.7      0.0         88.0  \n",
+      "1     -58.080969    284.0      0.7      0.0         88.0  \n",
+      "2     -58.195804    284.0      0.7      0.0         88.0  \n",
+      "3     -58.310639    284.0      0.7      0.0         88.0  \n",
+      "4     -58.315756    284.0      0.7      0.0         88.0  \n",
       "\n",
-      "[5 rows x 24 columns]\n"
+      "[5 rows x 101 columns]\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Display the first few rows of the dataframe\n",
+    "total_df.to_csv(RESOURCE_FOLDER+\"/data_resampled_20min_markov_supervised.csv\")\n",
     "print(total_df.head())"
    ]
   },
@@ -738,7 +740,7 @@
     "    return preds\n",
     "\n",
     "\n",
-    "csv_parser = CSVParser(folderpath=\"../../resources\")\n",
+    "csv_parser = CSVParser(folderpath=RESOURCE_FOLDER)\n",
     "\n",
     "test_df = csv_parser.retrieve_test_data()\n",
     "\n",
@@ -805,7 +807,7 @@
    "outputs": [],
    "source": [
     "#turn results into a csv file\n",
-    "result_df.to_csv(\"../../resources/results.csv\", index=False)"
+    "result_df.to_csv(RESOURCE_FOLDER+\"/results.csv\", index=False)"
    ]
   },
   {
