Add Markov to model

--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_engineering_functions = [categorize_navstat,numerize_UN_LOCODE, numerize_ISO] #,apply_markov, daystoETAparsed, categorize_rot\n",
+    "feature_engineering_functions = [categorize_navstat,numerize_UN_LOCODE, numerize_ISO,apply_markov] #, daystoETAparsed, categorize_rot\n",
     "\n",
     "\n",
     "feature_engineer = FeatureEngineer(total_df)\n",
@@ -502,6 +502,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "update_features=[apply_markov]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict_far_future(model, features, test_df,  forecast_columns):\n",
     "    \n",
     "    X_test = features.copy().iloc[-1:]\n",
@@ -523,6 +532,11 @@
     "        })\n",
     "        for idx, col in enumerate(forecast_columns):\n",
     "            new_row[f\"{col}\"] = y_pred[0, idx]  # Use the predicted value\n",
+    "        \n",
+    "        updateable_feature_engineer = FeatureEngineer(new_row)\n",
+    "        updateable_feature_engineer.apply_features(update_features)\n",
+    "        new_row = updateable_feature_engineer.get_dataframe()\n",
+    "\n",
     "        selected_columns = X_test.filter(regex=r'_t$|_t\\+|_t-')\n",
     "        non_selected_columns = X_test.drop(selected_columns.columns, axis=1)\n",
     "        new_row[non_selected_columns.columns] = X_test[non_selected_columns.columns].iloc[0]\n",
