Change feature engineer

--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_engineering_functions = [categorize_navstat,numerize_UN_LOCODE, numerize_ISO,apply_markov] #, daystoETAparsed, categorize_rot\n",
+    "feature_engineering_functions = [categorize_navstat, numerize_UN_LOCODE, numerize_ISO, apply_markov, type_dummies] #, daystoETAparsed, categorize_rot\n",
     "\n",
     "\n",
     "feature_engineer = FeatureEngineer(total_df)\n",
@@ -149,7 +149,7 @@
     "\n",
     "\n",
     "\n",
-    "def make_supervised(df, forecast_columns, sorting_column, input_window=1, output_window=1):\n",
+    "def make_supervised(df, forecast_columns, sorting_column, input_window=1, output_window=1, stepsize=1):\n",
     "    \"\"\"\n",
     "    Converts a multivariate time series dataframe into a supervised learning problem.\n",
     "    \n",
@@ -168,38 +168,52 @@
     "    #Put in a for loop here where you iterate over all IDs, to make sure things get correct\n",
     "    unique_sorts = df[sorting_column].unique()\n",
     "\n",
-    "    other_cols = [col for col in df.columns if col not in forecast_columns]\n",
-    "    \n",
     "    #Iterate through all IDs\n",
     "    print(\"Creating supervised data\")\n",
     "    for i, sorts in enumerate(unique_sorts):\n",
     "        loadBar.load_bar(len(unique_sorts),i+1)\n",
-    "        df_supervised = pd.DataFrame()\n",
     "        sort_df = df[df[sorting_column] == sorts]\n",
-    "\n",
-    "        #Iterate through all columns for input features\n",
-    "        for col in forecast_columns: \n",
-    "            for i in range(input_window, 0, -1):\n",
-    "                df_supervised[f\"{col}_t-{i}\"] = sort_df[col].shift(i)\n",
-    "            \n",
-    "            df_supervised[f\"{col}_t\"] = sort_df[col]\n",
-    "            \n",
-    "\n",
-    "        # Create columns for forecast (target) with forward shift\n",
-    "        for col in forecast_columns:\n",
-    "            for j in range(output_window, 0,-1):\n",
-    "                df_supervised[f\"{col}_t+{j}\"] = sort_df[col].shift(-j)\n",
-    "\n",
-    "        df_supervised = df_supervised.dropna()\n",
-    "\n",
-    "        df_supervised[other_cols] = sort_df[other_cols]\n",
+    "        for start in range(stepsize):\n",
+    "            sort_df = sort_df.iloc[start::stepsize]\n",
     "        \n",
-    "        df_new = pd.concat([df_new, df_supervised])\n",
+    "            df_supervised = supervise_single_vessel_df(sort_df, forecast_columns, input_window, output_window)\n",
+    "        \n",
+    "            df_new = pd.concat([df_new, df_supervised])\n",
     "    \n",
     "    return df_new\n",
     "\n",
-    "# total_df = pd.read_csv(\"../../build_resources/data_resampled_20min_markov.csv\")\n",
-    "\n"
+    "\n",
+    "def supervise_single_vessel_df(sort_df, forecast_columns, input_window=1, output_window=1):\n",
+    "    df_supervised = pd.DataFrame()\n",
+    "    other_cols = [col for col in sort_df.columns if col not in forecast_columns]\n",
+    "\n",
+    "    #Iterate through all columns for input features\n",
+    "    for col in forecast_columns: \n",
+    "        for i in range(input_window, 0, -1):\n",
+    "            df_supervised[f\"{col}_t-{i}\"] = sort_df[col].shift(i)\n",
+    "        \n",
+    "        df_supervised[f\"{col}_t\"] = sort_df[col]\n",
+    "        \n",
+    "\n",
+    "    # Create columns for forecast (target) with forward shift\n",
+    "    for col in forecast_columns:\n",
+    "        for j in range(output_window, 0,-1):\n",
+    "            df_supervised[f\"{col}_t+{j}\"] = sort_df[col].shift(-j)\n",
+    "\n",
+    "    df_supervised = df_supervised.dropna()\n",
+    "\n",
+    "    df_supervised[other_cols] = sort_df[other_cols]\n",
+    "\n",
+    "    return df_supervised\n",
+    "\n",
+    "\n",
+    "def supervise_on_stepsize(df, stepsize, output_forecast, sorting_column, input_window, output_window):\n",
+    "    \n",
+    "\n",
+    "    forecast_columns = [\"lat\", \"lon\"]\n",
+    "    supervised_df = make_supervised(df, forecast_columns, sorting_column, input_window, output_window)\n",
+    "    supervised_df.to_csv(f\"../../build_resources/supervised_{stepsize}_input_{input_window}_output_{output_window}.csv\")\n",
+    "    return supervised_df"
    ]
   },
   {
