--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -24,6 +24,8 @@
     "from sklearn.metrics import r2_score\n",
     "from warnings import simplefilter\n",
     "simplefilter(action=\"ignore\", category=pd.errors.PerformanceWarning)\n",
+    "simplefilter(action=\"ignore\", category=FutureWarning)\n",
+    "simplefilter(action=\"ignore\", category=UserWarning)\n",
     "from sklearn.model_selection import RandomizedSearchCV, TimeSeriesSplit\n",
     "\n",
     "import loadBar\n",
@@ -149,7 +151,7 @@
     "\n",
     "\n",
     "\n",
-    "def make_supervised(df, forecast_columns, sorting_column, input_window=1, output_window=1, stepsize=1):\n",
+    "def make_supervised(df, forecast_columns, sorting_column, input_window=1, output_window=1, stepsize=1, verbose=True):\n",
     "    \"\"\"\n",
     "    Converts a multivariate time series dataframe into a supervised learning problem.\n",
     "    \n",
@@ -169,9 +171,11 @@
     "    unique_sorts = df[sorting_column].unique()\n",
     "\n",
     "    #Iterate through all IDs\n",
-    "    print(\"Creating supervised data\")\n",
+    "    if verbose:\n",
+    "        print(\"Creating supervised data\")\n",
     "    for i, sorts in enumerate(unique_sorts):\n",
-    "        loadBar.load_bar(len(unique_sorts),i+1)\n",
+    "        if verbose:\n",
+    "            loadBar.load_bar(len(unique_sorts),i+1)\n",
     "        sort_df = df[df[sorting_column] == sorts]\n",
     "        for start in range(stepsize):\n",
     "            sort_df = sort_df.iloc[start::stepsize]\n",
@@ -636,7 +640,7 @@
     "    latest_features = feature_engineer.get_dataframe()\n",
     "    latest_features = pd.get_dummies(latest_features, columns=ONE_HOT_COLUMNS, drop_first=False)\n",
     "    \n",
-    "    latest_features = make_supervised(latest_features, OUTPUT_FORECAST, \"vesselId\" , INPUT_WINDOW, OUTPUT_WINDOW)\n",
+    "    latest_features = make_supervised(latest_features, OUTPUT_FORECAST, \"vesselId\" , INPUT_WINDOW, OUTPUT_WINDOW, verbose=False)\n",
     "    latest_features = shift_to_back(latest_features)\n",
     "    latest_features = latest_features.dropna()\n",
     "    latest_features = latest_features.drop(DELETEABLE_COLUMNS, axis=1)\n",
