--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -694,10 +694,7 @@
     "total_df.set_index(\"time\", inplace=True)\n",
     "print(total_df.head())\n",
     "result_df = predict_times(model, total_df, test_df)\n",
-    "print(result_df)\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(result_df)"
    ]
   },
   {
@@ -857,7 +854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -871,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
