simpler simple xgboost

--- a/src/xgboost_simple.ipynb
+++ b/src/xgboost_simple.ipynb
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_time_diffs_within_window(df, timewindow=timedelta(days=5)):\n",
+    "def calculate_time_diffs_within_window(df, timewindow=timedelta(days=5), n=1):\n",
     "    # Ensure the DataFrame is sorted by vesselId and time\n",
     "    df = df.sort_values(by=['vesselId', 'time']).reset_index(drop=True)\n",
     "    \n",
@@ -79,13 +79,14 @@
     "        # Find rows within the same vesselId and within the time window\n",
     "        future_rows = df[(df['vesselId'] == vessel_id) & \n",
     "                         (df['time'] > current_time) & \n",
-    "                         (df['time'] <= current_time + timewindow)]\n",
+    "                         (df['time'] <= current_time + timewindow)].sample(n=n)\n",
     "        \n",
     "        # Calculate time differences and future coordinates for each matching future row\n",
     "        time_diff_list = []\n",
     "        lat_list = []\n",
     "        lon_list = []\n",
     "        \n",
+    "        future_row\n",
     "        for _, future_row in future_rows.iterrows():\n",
     "            time_diff = (future_row['time'] - current_time).total_seconds()\n",
     "            time_diff_list.append(time_diff)          # Time difference in seconds\n",
