Markv did nt wrk

--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -898,11 +898,20 @@
     "\n",
     "Kagge 174"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eight mde\n",
+    "\n",
+    "Added new hyperparams and new navstat."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -916,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
