--- a/src/xgboost_simple.ipynb
+++ b/src/xgboost_simple.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,64 +58,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_time_diffs_within_window(df, timewindow=timedelta(days=5), n=1):\n",
-    "    # Ensure the DataFrame is sorted by vesselId and time\n",
-    "    df = df.sort_values(by=['vesselId', 'time']).reset_index(drop=True)\n",
+    "def calculate_time_diffs_within_window(df, timewindow=timedelta(days=5), n=2):\n",
+    "    result_df= pd.DataFrame()\n",
+    "    vessel_dfs = df.groupby('vesselId')\n",
     "    \n",
-    "    # Initialize empty lists to store results\n",
-    "    time_diffs = []\n",
-    "    future_latitudes = []\n",
-    "    future_longitudes = []\n",
+    "    for _, vessel_df in vessel_dfs:\n",
+    "        vessel_df = vessel_df.sort_values(by='time')\n",
+    "\n",
+    "        for i in range(len(vessel_df)):\n",
+    "            loadBar.load_bar(len(vessel_df),i)\n",
+    "            current_row = vessel_df.iloc[i]\n",
+    "            #Pick n random rows that are later in the dataframe but within the timewindow\n",
+    "            future_rows = vessel_df.iloc[i+1:][(vessel_df['time'] > current_row['time']) \n",
+    "                                               & (vessel_df['time'] <= current_row['time'] + timewindow)]\n",
+    "            if len(future_rows) > n:\n",
+    "                future_rows = future_rows.sample(n=n)\n",
+    "            elif len(future_rows) == 0:\n",
+    "                break\n",
+    "            \n",
+    "            #Add the current row, future latitudes, future longitudes and the time differences to the result_df as n new rows\n",
+    "            for future_row in future_rows.iterrows():\n",
+    "                new_row = current_row.copy()\n",
+    "                new_row['next_latitude'] = future_row[1]['latitude']\n",
+    "                new_row['next_longitude'] = future_row[1]['longitude']\n",
+    "                new_row['time_diff'] = (future_row[1]['time'] - current_row['time']).total_seconds()\n",
+    "                result_df = pd.concat([result_df,new_row])\n",
     "    \n",
-    "    for idx, row in df.iterrows():\n",
-    "        # Get the vesselId and time for the current row\n",
-    "        vessel_id = row['vesselId']\n",
-    "        current_time = row['time']\n",
-    "        \n",
-    "        # Find rows within the same vesselId and within the time window\n",
-    "        future_rows = df[(df['vesselId'] == vessel_id) & \n",
-    "                         (df['time'] > current_time) & \n",
-    "                         (df['time'] <= current_time + timewindow)].sample(n=n)\n",
-    "        \n",
-    "        # Calculate time differences and future coordinates for each matching future row\n",
-    "        time_diff_list = []\n",
-    "        lat_list = []\n",
-    "        lon_list = []\n",
-    "        \n",
-    "        future_row\n",
-    "        for _, future_row in future_rows.iterrows():\n",
-    "            time_diff = (future_row['time'] - current_time).total_seconds()\n",
-    "            time_diff_list.append(time_diff)          # Time difference in seconds\n",
-    "            lat_list.append(future_row['latitude'])   # Future latitude\n",
-    "            lon_list.append(future_row['longitude'])  # Future longitude\n",
-    "        \n",
-    "        # Append lists of results for each row\n",
-    "        time_diffs.append(time_diff_list)\n",
-    "        future_latitudes.append(lat_list)\n",
-    "        future_longitudes.append(lon_list)\n",
-    "    \n",
-    "    # Add the lists as new columns in the DataFrame\n",
-    "    df['time_diffs_seconds'] = time_diffs\n",
-    "    df['future_latitudes'] = future_latitudes\n",
-    "    df['future_longitudes'] = future_longitudes\n",
+    "    result_df['diff_seconds'] = result_df['time_diff'].dt.total_seconds()\n",
+    "    result_df['diff_minutes'] = result_df['diff_seconds'] / 60\n",
+    "    result_df['diff_hours'] = result_df['diff_seconds'] / 3600\n",
+    "    result_df['diff_days'] = result_df['diff_seconds'] / 86400\n",
     "    \n",
     "    # Identify the last row for each vesselId for separation\n",
     "    last_rows = df.groupby('vesselId').tail(1)\n",
     "    \n",
     "    # Remove the last rows from the main DataFrame\n",
-    "    df = df.drop(last_rows.index).reset_index(drop=True)\n",
+    "    result_df = result_df.drop(last_rows.index).reset_index(drop=True)\n",
     "    last_rows = last_rows.reset_index(drop=True)\n",
     "    \n",
-    "    return df, last_rows"
+    "    return result_df, last_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,35 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    time    cog   sog  rot  heading  navstat  latitude  \\\n",
-      "401  2024-05-05 13:25:50   40.0   0.0    1      328        1  36.84686   \n",
-      "6414 2024-05-07 23:51:29  291.0   0.3    0      275        2  48.53320   \n",
-      "7085 2024-05-07 21:53:14  129.3  15.6    0      128        0  28.82071   \n",
-      "7916 2024-05-05 04:33:43  303.7  10.0   -2      303        0  33.86918   \n",
-      "9337 2024-05-07 23:42:38   38.9  15.5    3       40        0  33.18068   \n",
-      "\n",
-      "      longitude                  vesselId                    portId  ...  \\\n",
-      "401     5.84638  61e9f38eb937134a3c4bfd8b  61d36ee00a1807568ff9a072  ...   \n",
-      "6414   -6.12003  61e9f38eb937134a3c4bfd8d  61d3743d3aeaecc07011a6fa  ...   \n",
-      "7085 -120.46513  61e9f38eb937134a3c4bfd8f  61d37ab61366c3998241d9f4  ...   \n",
-      "7916 -118.81433  61e9f38eb937134a3c4bfd91  61d37a1d1366c3998241d91e  ...   \n",
-      "9337   -9.43055  61e9f390b937134a3c4bfd93  61d38259b7b7526e1adf3a41  ...   \n",
-      "\n",
-      "     enginePower freshWater     fuel      homePort  length maxHeight  \\\n",
-      "401          0.0        NaN      NaN          OSLO  199.00       5.0   \n",
-      "6414     14220.0        NaN      NaN      MONROVIA  182.00       NaN   \n",
-      "7085     14220.0        NaN      NaN  SAINT JOHN'S  182.00       NaN   \n",
-      "7916     11060.0        NaN      NaN           NaN  167.00       NaN   \n",
-      "9337     13140.0     491.47  3236.78        Panama  199.98       NaN   \n",
-      "\n",
-      "      maxSpeed  maxWidth  rampCapacity  yearBuilt  \n",
-      "401       18.6      15.2         150.0       2000  \n",
-      "6414       NaN       NaN           NaN       2006  \n",
-      "7085       NaN       NaN           NaN       2010  \n",
-      "7916       NaN       NaN           NaN       2011  \n",
-      "9337       NaN       NaN           NaN       2018  \n",
-      "\n",
-      "[5 rows x 34 columns]\n"
+      "[==------------------] 14.08% complete\r"
      ]
     }
    ],
@@ -198,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,12 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_test_split(df, perc1, perc2):\n",
-    "    y_list = ['next_latitude', 'next_longitude']\n",
+    "\n",
+    "    y_list = ['next_latitude', 'next_longitude'] #'next_latitude', 'next_longitude'\n",
     "    ys = df[y_list]\n",
     "    Xs = df.drop(columns = y_list)\n",
     "\n",
@@ -307,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
