--- a/src/xgboost_simple.ipynb
+++ b/src/xgboost_simple.ipynb
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[==------------------] 14.08% complete\r"
+      "[==------------------] 14.25% complete\r"
      ]
     }
    ],
@@ -252,7 +252,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_test_split(df, perc1, perc2):\n",
+    "def train_test_split(df_old, perc1, perc2):\n",
+    "\n",
+    "    df = df_old.sample(frac=1).reset_index(drop=True)\n",
     "\n",
     "    y_list = ['next_latitude', 'next_longitude'] #'next_latitude', 'next_longitude'\n",
     "    ys = df[y_list]\n",
