Leave the diff_times

--- a/src/xgboost_simple.ipynb
+++ b/src/xgboost_simple.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,10 +118,10 @@
     "    \n",
     "    print(\"Concating\")\n",
     "    result_df = pd.DataFrame(result_list)\n",
-    "    result_df['diff_seconds'] = result_df['time_diff']\n",
-    "    result_df['diff_minutes'] = result_df['diff_seconds'] / 60\n",
-    "    result_df['diff_hours'] = result_df['diff_seconds'] / 3600\n",
-    "    result_df['diff_days'] = result_df['diff_seconds'] / 86400\n",
+    "    # result_df['diff_seconds'] = result_df['time_diff']\n",
+    "    # result_df['diff_minutes'] = result_df['diff_seconds'] / 60\n",
+    "    # result_df['diff_hours'] = result_df['diff_seconds'] / 3600\n",
+    "    # result_df['diff_days'] = result_df['diff_seconds'] / 86400\n",
     "    \n",
     "    # Identify the last row for each vesselId for separation\n",
     "    last_rows = df.groupby('vesselId').tail(1)\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,12 +158,13 @@
     "    last_rows = df.groupby('vesselId').tail(1)\n",
     "    # Calculate the time difference in seconds between consecutive times per vesselId\n",
     "    df['time_diff'] = df.groupby('vesselId')['time'].diff().shift(-1)\n",
+    "    df['time_diff'] = df['time_diff'].dt.total_seconds()\n",
     "    \n",
     "    # Create columns for each time unit by converting from seconds\n",
-    "    df['diff_seconds'] = df['time_diff'].dt.total_seconds()\n",
-    "    df['diff_minutes'] = df['diff_seconds'] / 60\n",
-    "    df['diff_hours'] = df['diff_seconds'] / 3600\n",
-    "    df['diff_days'] = df['diff_seconds'] / 86400\n",
+    "    # df['diff_seconds'] = df['time_diff'].dt.total_seconds()\n",
+    "    # df['diff_minutes'] = df['diff_seconds'] / 60\n",
+    "    # df['diff_hours'] = df['diff_seconds'] / 3600\n",
+    "    # df['diff_days'] = df['diff_seconds'] / 86400\n",
     "    \n",
     "    # Get the latitude and longitude of the next row within each vesselId group\n",
     "    df['next_latitude'] = df.groupby('vesselId')['latitude'].shift(-1)\n",
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -404,12 +405,12 @@
     "dtest_X = xgb.DMatrix(X_test)\n",
     "\n",
     "params = {\"objective\": \"reg:squarederror\",\n",
-    "            \"max_depth\": 7,\n",
+    "            \"max_depth\": 10, #7\n",
     "            \"booster\": \"gbtree\",\n",
     "            \"tree-method\": \"gpu_hist\",\n",
-    "            \"colsample_bynode\": 0.4,\n",
-    "            \"num_parallel_tree\": 50,\n",
-    "            \"subsample\": 0.6,\n",
+    "            \"colsample_bynode\": 0.5, #0.4\n",
+    "            \"num_parallel_tree\": 30, #50\n",
+    "            \"subsample\": 0.7, #0.6\n",
     "            \"seed\": 42,\n",
     "            \"learning_rate\": 1,\n",
     "            #\"n_estimators\": 100,\n",
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,10 +459,10 @@
     "    merged_df['time_diff'] = (merged_df['time'] - merged_df['time_last']).dt.total_seconds()\n",
     "    \n",
     "    # Create columns for each time unit by converting from seconds\n",
-    "    merged_df['diff_seconds'] = merged_df['time_diff']\n",
-    "    merged_df['diff_minutes'] = merged_df['time_diff'] / 60\n",
-    "    merged_df['diff_hours'] = merged_df['time_diff'] / 3600\n",
-    "    merged_df['diff_days'] = merged_df['time_diff'] / 86400\n",
+    "    # merged_df['diff_seconds'] = merged_df['time_diff']\n",
+    "    # merged_df['diff_minutes'] = merged_df['time_diff'] / 60\n",
+    "    # merged_df['diff_hours'] = merged_df['time_diff'] / 3600\n",
+    "    # merged_df['diff_days'] = merged_df['time_diff'] / 86400\n",
     "    \n",
     "    # Drop the temporary 'time_diff' column and 'time_last' if desired\n",
     "    merged_df = merged_df.drop(columns=[ 'time_last'])\n",
@@ -706,7 +707,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -720,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
