--- a/src/xgboost_simple.ipynb
+++ b/src/xgboost_simple.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_time_diffs_within_window(df):\n",
+    "def calculate_time_diffs_within_window(df, time_deltas):\n",
     "    result_list= []\n",
     "    vessel_dfs = df.groupby('vesselId')\n",
     "    j=0\n",
@@ -106,16 +106,26 @@
     "        \n",
     "        vessel_df = vessel_df.sort_values(by='time')\n",
     "        groups = vessel_df.groupby(pd.Grouper(key=\"time\", freq='5D'))\n",
+    "        \n",
+    "        \n",
     "        for _, group in groups:\n",
+    "                group_deltas=time_deltas.copy()\n",
+    "                feature_rows=[group.iloc[0]]\n",
+    "\n",
     "                for i in range(len(group)):\n",
-    "                    current_row = group.iloc[0]\n",
     "                    future_row = group.iloc[i]\n",
-    "                    new_row = current_row.copy()\n",
-    "                    new_row['next_latitude'] = future_row['latitude']\n",
-    "                    new_row['next_longitude'] = future_row['longitude']\n",
-    "                    new_row['time_diff'] = (future_row['time'] - current_row['time']).total_seconds()\n",
-    "                    result_list.append(new_row)\n",
-    "    \n",
+    "\n",
+    "                    for current_row in feature_rows:\n",
+    "                        new_row = current_row.copy()\n",
+    "                        new_row['next_latitude'] = future_row['latitude']\n",
+    "                        new_row['next_longitude'] = future_row['longitude']\n",
+    "                        new_row['time_diff'] = (future_row['time'] - current_row['time']).total_seconds()\n",
+    "                        result_list.append(new_row)\n",
+    "\n",
+    "                    if future_row['time']-group.iloc[-1]['time'] < group_deltas[0]:\n",
+    "                            group_deltas.pop(0)\n",
+    "                            feature_rows.append(future_row)\n",
+    "                            break\n",
     "    print(\"Concating\")\n",
     "    result_df = pd.DataFrame(result_list)\n",
     "    # result_df['diff_seconds'] = result_df['time_diff']\n",
@@ -137,7 +147,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "timedeltas=[timedelta(days=3),timedelta(days=1)]"
+   ]
   },
   {
    "cell_type": "code",
